[gd_scene load_steps=14 format=4 uid="uid://dy24s42glgktx"]

[ext_resource type="Texture2D" uid="uid://bq1dap6gjpxr7" path="res://Map_Icons/7SEYHd.png" id="1_jgce8"]
[ext_resource type="PackedScene" uid="uid://c6spn0m6m85vs" path="res://Player/player_camera.tscn" id="2_if10o"]
[ext_resource type="Script" uid="uid://xip1aplnqbgb" path="res://Map/Main_Maps/main_map.gd" id="3_oilk6"]
[ext_resource type="PackedScene" uid="uid://denddx5f87r3r" path="res://Map/Rails/rail_placer.tscn" id="6_4lcrx"]
[ext_resource type="PackedScene" uid="uid://bsap4yl65x1wd" path="res://Gui/Train_Gui/depot_window.tscn" id="8_mxbp3"]
[ext_resource type="PackedScene" uid="uid://d2x16vqu0dy7j" path="res://Units/unit_managers/unit_creator_window.tscn" id="9_k4rfp"]
[ext_resource type="PackedScene" uid="uid://bmywob5ku4c3r" path="res://Gui/factory_window.tscn" id="9_p8wcw"]
[ext_resource type="PackedScene" uid="uid://tgrwgdaijaeh" path="res://Gui/station_window.tscn" id="9_txwkn"]
[ext_resource type="PackedScene" uid="uid://bipirwbhqdjb2" path="res://Gui/Player_Factory_Gui's/factory_recipe_gui.tscn" id="10_60crw"]
[ext_resource type="PackedScene" uid="uid://dqvn8y35ax23b" path="res://Units/unit_info_window.tscn" id="10_75rfn"]
[ext_resource type="PackedScene" uid="uid://l3xw71d3y3e7" path="res://Gui/Player_Factory_Gui's/factory_construction_gui.tscn" id="11_46x22"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tywjw"]
texture = ExtResource("1_jgce8")
margins = Vector2i(0, 34)
texture_region_size = Vector2i(128, 192)
1:0/0 = 0
1:0/0/terrain_set = 0
2:0/0 = 0
2:0/0/terrain_set = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/terrain_set = 0
5:1/0 = 0
5:1/0/terrain_set = 0
6:1/0 = 0
6:1/0/terrain_set = 0
7:1/0 = 0
0:0/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_hlajd"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(127, 110)
terrain_set_0/mode = 1
terrain_set_0/terrain_0/name = "Hilly"
terrain_set_0/terrain_0/color = Color(0.5, 0.4375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_tywjw")

[node name="main_map" type="TileMapLayer"]
z_index = -1
z_as_relative = false
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AADz//b/AQAAAAAAAADz//f/AQAAAAAAAADz//7/AQAGAAEAAADz////AQAGAAEAAADz/wAAAQAGAAEAAADz/wEAAQAGAAEAAADz/wIAAQAGAAEAAAD0//b/AQAAAAAAAAD0//f/AQAAAAAAAAD0//j/AQAAAAAAAAD0//z/AQAAAAAAAAD0//3/AQAGAAEAAAD0//7/AQAGAAEAAAD0////AQAGAAEAAAD0/wAAAQADAAEAAAD0/wEAAQAGAAEAAAD0/wIAAQAGAAEAAAD1//X/AQAAAAAAAAD1//b/AQAAAAAAAAD1//f/AQAAAAAAAAD1//j/AQAAAAAAAAD1//n/AQAAAAAAAAD1//r/AQAAAAAAAAD1//v/AQAAAAAAAAD1//z/AQAAAAAAAAD1//3/AQAGAAEAAAD1//7/AQAGAAEAAAD1////AQADAAEAAAD1/wEAAQAGAAEAAAD1/wIAAQAGAAEAAAD1/wMAAQAGAAEAAAD1/wQAAQAAAAAAAAD1/wUAAQAAAAAAAAD1/wYAAQAAAAAAAAD2//X/AQAAAAAAAAD2//b/AQAAAAAAAAD2//f/AQABAAAAAAD2//j/AQABAAAAAAD2//n/AQAAAAAAAAD2//r/AQAAAAAAAAD2//v/AQABAAAAAAD2//z/AQAAAAAAAAD2//3/AQAAAAAAAAD2//7/AQAAAAAAAAD2////AQAAAAAAAAD2/wAAAQAAAAAAAAD2/wEAAQADAAEAAAD2/wIAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wQAAQAAAAAAAAD2/wUAAQAAAAAAAAD2/wYAAQAAAAAAAAD3//X/AQAAAAAAAAD3//b/AQAAAAAAAAD3//f/AQABAAAAAAD3//j/AQABAAAAAAD3//n/AQAEAAAAAAD3//r/AQAEAAAAAAD3//v/AQABAAAAAAD3//z/AQAAAAAAAAD3//3/AQAAAAAAAAD3//7/AQADAAAAAAD3////AQADAAAAAAD3/wAAAQAAAAAAAAD3/wEAAQAAAAAAAAD3/wIAAQAAAAAAAAD3/wMAAQAAAAAAAAD3/wQAAQABAAAAAAD3/wUAAQAAAAAAAAD3/wYAAQAAAAAAAAD4//X/AQAAAAAAAAD4//b/AQAAAAAAAAD4//f/AQADAAAAAAD4//j/AQADAAAAAAD4//n/AQACAAAAAAD4//r/AQAEAAAAAAD4//v/AQACAAAAAAD4//z/AQABAAAAAAD4//3/AQADAAAAAAD4//7/AQADAAAAAAD4////AQAAAAAAAAD4/wAAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wIAAQABAAAAAAD4/wMAAQAAAAAAAAD4/wQAAQAAAAAAAAD4/wUAAQABAAAAAAD4/wYAAQAAAAAAAAD5/+L/AQAAAAAAAAD5/+P/AQAAAAAAAAD5/+T/AQAAAAAAAAD5/+X/AQAAAAAAAAD5//X/AQAAAAAAAAD5//b/AQAAAAAAAAD5//f/AQABAAAAAAD5//j/AQABAAAAAAD5//n/AQACAAAAAAD5//r/AQABAAAAAAD5//v/AQABAAAAAAD5//z/AQAAAAAAAAD5//3/AQAAAAAAAAD5//7/AQAAAAAAAAD5////AQAAAAAAAAD5/wAAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wIAAQABAAAAAAD5/wMAAQABAAAAAAD5/wQAAQAAAAAAAAD5/wUAAQAGAAEAAAD5/wYAAQAAAAAAAAD6/+L/AQAAAAAAAAD6/+P/AQAAAAAAAAD6/+T/AQAAAAAAAAD6/+X/AQAAAAAAAAD6/+b/AQAAAAAAAAD6//X/AQAAAAAAAAD6//b/AQAAAAAAAAD6//f/AQADAAAAAAD6//j/AQABAAAAAAD6//n/AQABAAAAAAD6//r/AQABAAAAAAD6//v/AQABAAAAAAD6//z/AQAAAAAAAAD6//3/AQAAAAAAAAD6//7/AQAAAAAAAAD6////AQADAAAAAAD6/wAAAQAAAAAAAAD6/wEAAQAGAAEAAAD6/wIAAQAGAAEAAAD6/wMAAQABAAAAAAD6/wQAAQABAAAAAAD6/wUAAQAGAAEAAAD6/wYAAQAGAAEAAAD6/wcAAQAAAAAAAAD7/+H/AQAAAAAAAAD7/+L/AQAAAAAAAAD7/+P/AQAAAAAAAAD7/+T/AQAAAAAAAAD7/+X/AQAAAAAAAAD7/+b/AQAAAAAAAAD7//X/AQAAAAAAAAD7//b/AQADAAAAAAD7//f/AQAAAAAAAAD7//j/AQAAAAAAAAD7//n/AQAAAAAAAAD7//r/AQAAAAAAAAD7//v/AQAAAAAAAAD7//z/AQAAAAAAAAD7//3/AQAAAAAAAAD7//7/AQADAAAAAAD7////AQADAAAAAAD7/wAAAQAAAAAAAAD7/wEAAQAGAAEAAAD7/wIAAQAGAAEAAAD7/wMAAQABAAAAAAD7/wQAAQAGAAEAAAD7/wUAAQAGAAEAAAD7/wYAAQAGAAEAAAD7/wcAAQAAAAAAAAD8/+L/AQAAAAAAAAD8/+P/AQAAAAAAAAD8/+T/AQAAAAAAAAD8/+X/AQAAAAAAAAD8/+b/AQAAAAAAAAD8/+f/AQAAAAAAAAD8//X/AQAAAAAAAAD8//b/AQAAAAAAAAD8//f/AQAAAAAAAAD8//j/AQAAAAAAAAD8//n/AQAGAAEAAAD8//r/AQAGAAEAAAD8//v/AQAGAAEAAAD8//z/AQAGAAEAAAD8//3/AQAGAAEAAAD8//7/AQAAAAAAAAD8////AQADAAAAAAD8/wAAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD8/wMAAQAGAAEAAAD8/wQAAQAAAAAAAAD8/wUAAQAGAAEAAAD8/wYAAQADAAAAAAD8/wcAAQAGAAEAAAD8/wgAAQAAAAAAAAD9/+H/AQAAAAAAAAD9/+L/AQAAAAAAAAD9/+P/AQAAAAAAAAD9/+T/AQABAAAAAAD9/+X/AQABAAAAAAD9/+b/AQAAAAAAAAD9/+f/AQAAAAAAAAD9//T/AQAAAAAAAAD9//X/AQAAAAAAAAD9//b/AQAEAAEAAAD9//f/AQAAAAAAAAD9//j/AQAGAAEAAAD9//n/AQAGAAEAAAD9//r/AQAEAAEAAAD9//v/AQAEAAEAAAD9//z/AQAEAAEAAAD9//3/AQAGAAEAAAD9//7/AQAFAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAGAAEAAAD9/wIAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wQAAQAGAAEAAAD9/wUAAQADAAAAAAD9/wYAAQADAAAAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAAAAAD+/+H/AQAAAAAAAAD+/+L/AQAAAAAAAAD+/+P/AQAAAAAAAAD+/+T/AQAAAAAAAAD+/+X/AQAAAAAAAAD+/+b/AQAAAAAAAAD+/+f/AQAAAAAAAAD+//X/AQAAAAAAAAD+//b/AQAEAAEAAAD+//f/AQAEAAEAAAD+//j/AQAGAAEAAAD+//n/AQAGAAEAAAD+//r/AQAEAAEAAAD+//v/AQAEAAEAAAD+//z/AQAEAAEAAAD+//3/AQAGAAEAAAD+//7/AQAAAAAAAAD+////AQADAAAAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wMAAQAGAAEAAAD+/wQAAQAGAAEAAAD+/wUAAQAGAAEAAAD+/wYAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAAAAAD//+H/AQAAAAAAAAD//+L/AQAAAAAAAAD//+P/AQABAAAAAAD//+T/AQAAAAAAAAD//+X/AQABAAAAAAD//+b/AQAAAAAAAAD//+f/AQAAAAAAAAD///T/AQAAAAAAAAD///X/AQAAAAAAAAD///b/AQAEAAEAAAD///f/AQAGAAEAAAD///j/AQAGAAEAAAD///n/AQAEAAEAAAD///r/AQAEAAEAAAD///v/AQAGAAEAAAD///z/AQAGAAEAAAD///3/AQAAAAAAAAD///7/AQAFAAAAAAD/////AQAAAAAAAAD//wAAAQAGAAEAAAD//wEAAQAAAAAAAAD//wIAAQAGAAEAAAD//wMAAQAGAAEAAAD//wQAAQAGAAEAAAD//wUAAQADAAAAAAD//wYAAQAAAAAAAAD//wcAAQAAAAAAAAAAAOH/AQAAAAAAAAAAAOL/AQAAAAAAAAAAAOP/AQAAAAAAAAAAAOT/AQAAAAAAAAAAAOX/AQABAAAAAAAAAOb/AQAAAAAAAAAAAOf/AQAAAAAAAAAAAOj/AQAAAAAAAAAAAPX/AQAAAAAAAAAAAPb/AQAEAAEAAAAAAPf/AQAEAAEAAAAAAPj/AQAGAAEAAAAAAPn/AQAEAAEAAAAAAPr/AQAGAAEAAAAAAPv/AQAGAAEAAAAAAPz/AQAGAAEAAAAAAP7/AQAAAAAAAAAAAP//AQAAAAAAAAAAAAAAAQABAAIAAAAAAAEAAQAGAAEAAAAAAAIAAQAGAAEAAAAAAAMAAQAGAAEAAAAAAAQAAQAGAAEAAAAAAAUAAQADAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAABAOH/AQAAAAAAAAABAOL/AQAAAAAAAAABAOP/AQAAAAAAAAABAOT/AQAAAAAAAAABAOX/AQAAAAAAAAABAOb/AQABAAAAAAABAOf/AQAAAAAAAAABAOj/AQAAAAAAAAABAPT/AQAAAAAAAAABAPX/AQAEAAEAAAABAPb/AQAEAAEAAAABAPf/AQAGAAEAAAABAPj/AQAEAAEAAAABAPn/AQAEAAEAAAABAPr/AQAEAAEAAAABAPv/AQAEAAEAAAABAPz/AQAGAAEAAAABAP3/AQADAAAAAAABAP7/AQAAAAAAAAABAP//AQAGAAEAAAABAAAAAQAGAAEAAAABAAEAAQAGAAEAAAABAAIAAQAAAAAAAAABAAMAAQAGAAEAAAABAAQAAQAAAAAAAAABAAUAAQADAAAAAAABAAYAAQAAAAAAAAACAOL/AQAAAAAAAAACAOP/AQAGAAEAAAACAOT/AQAGAAEAAAACAOX/AQAGAAEAAAACAOb/AQAAAAAAAAACAOf/AQABAAAAAAACAOj/AQAAAAAAAAACAOn/AQAAAAAAAAACAOr/AQAAAAAAAAACAPX/AQAAAAAAAAACAPb/AQAEAAEAAAACAPf/AQAEAAEAAAACAPj/AQAEAAEAAAACAPn/AQAEAAEAAAACAPr/AQAGAAEAAAACAPv/AQAEAAEAAAACAPz/AQAEAAEAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAACAP//AQAGAAEAAAACAAAAAQAGAAEAAAACAAEAAQAGAAEAAAACAAIAAQAAAAAAAAACAAMAAQADAAAAAAACAAQAAQADAAAAAAACAAUAAQADAAAAAAACAAYAAQAAAAAAAAADAOD/AQAAAAAAAAADAOH/AQAAAAAAAAADAOL/AQAAAAAAAAADAOP/AQAGAAEAAAADAOT/AQAGAAEAAAADAOX/AQAGAAEAAAADAOb/AQAAAAAAAAADAOf/AQAAAAAAAAADAOj/AQAAAAAAAAADAOn/AQAAAAAAAAADAOr/AQAAAAAAAAADAPH/AQAAAAAAAAADAPL/AQAAAAAAAAADAPP/AQAAAAAAAAADAPT/AQAAAAAAAAADAPX/AQAAAAAAAAADAPb/AQAEAAEAAAADAPf/AQAGAAEAAAADAPj/AQAEAAEAAAADAPn/AQAEAAEAAAADAPr/AQAGAAEAAAADAPv/AQAEAAEAAAADAPz/AQAEAAEAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAADAP//AQAGAAEAAAADAAAAAQAGAAEAAAADAAEAAQADAAAAAAADAAIAAQADAAAAAAADAAMAAQAGAAEAAAADAAQAAQADAAAAAAADAAUAAQAAAAAAAAAEAN//AQAAAAAAAAAEAOD/AQAAAAAAAAAEAOH/AQAAAAAAAAAEAOL/AQAAAAAAAAAEAOP/AQAAAAAAAAAEAOT/AQAGAAEAAAAEAOX/AQAGAAEAAAAEAOb/AQAGAAEAAAAEAOf/AQAAAAAAAAAEAOj/AQABAAAAAAAEAOn/AQAAAAAAAAAEAOr/AQAAAAAAAAAEAOv/AQAAAAAAAAAEAOz/AQAAAAAAAAAEAO3/AQAAAAAAAAAEAO7/AQAAAAAAAAAEAO//AQAAAAAAAAAEAPD/AQAAAAAAAAAEAPH/AQAAAAAAAAAEAPL/AQABAAAAAAAEAPP/AQAAAAAAAAAEAPT/AQAAAAAAAAAEAPX/AQADAAAAAAAEAPb/AQAEAAAAAAAEAPf/AQAAAAAAAAAEAPj/AQAGAAEAAAAEAPn/AQAEAAEAAAAEAPr/AQAEAAEAAAAEAPv/AQAGAAEAAAAEAPz/AQAGAAEAAAAEAP3/AQAEAAEAAAAEAP7/AQAGAAEAAAAEAP//AQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQADAAAAAAAEAAIAAQADAAAAAAAEAAMAAQAGAAEAAAAEAAQAAQAGAAEAAAAEAAUAAQAGAAEAAAAEAAYAAQAAAAAAAAAFAN7/AQAAAAAAAAAFAN//AQAAAAAAAAAFAOD/AQAAAAAAAAAFAOH/AQAAAAAAAAAFAOL/AQAAAAAAAAAFAOP/AQAAAAAAAAAFAOT/AQAGAAEAAAAFAOX/AQAGAAEAAAAFAOb/AQAGAAEAAAAFAOf/AQAAAAAAAAAFAOj/AQAAAAAAAAAFAOn/AQAAAAAAAAAFAOr/AQAAAAAAAAAFAOv/AQAAAAAAAAAFAOz/AQAAAAAAAAAFAO3/AQAAAAAAAAAFAO7/AQABAAAAAAAFAO//AQABAAAAAAAFAPD/AQABAAAAAAAFAPH/AQAAAAAAAAAFAPL/AQABAAAAAAAFAPP/AQAAAAAAAAAFAPT/AQADAAAAAAAFAPX/AQAEAAAAAAAFAPb/AQAEAAAAAAAFAPf/AQAGAAEAAAAFAPj/AQAGAAEAAAAFAPn/AQAEAAEAAAAFAPr/AQAEAAEAAAAFAPv/AQAGAAEAAAAFAPz/AQAGAAEAAAAFAP3/AQAGAAEAAAAFAP7/AQAGAAEAAAAFAP//AQAGAAEAAAAFAAAAAQABAAAAAAAFAAEAAQABAAAAAAAFAAIAAQAEAAEAAAAFAAMAAQAEAAEAAAAFAAQAAQAGAAEAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAN7/AQAAAAAAAAAGAN//AQAAAAAAAAAGAOD/AQAAAAAAAAAGAOH/AQAAAAAAAAAGAOL/AQAAAAAAAAAGAOP/AQAAAAAAAAAGAOT/AQAAAAAAAAAGAOX/AQAEAAEAAAAGAOb/AQAGAAEAAAAGAOf/AQAGAAEAAAAGAOj/AQAAAAAAAAAGAOn/AQAAAAAAAAAGAOr/AQAAAAAAAAAGAOv/AQAAAAAAAAAGAOz/AQAAAAAAAAAGAO3/AQAAAAAAAAAGAO7/AQAAAAAAAAAGAO//AQABAAAAAAAGAPD/AQAAAAAAAAAGAPH/AQAAAAAAAAAGAPL/AQABAAAAAAAGAPP/AQAAAAAAAAAGAPT/AQAAAAAAAAAGAPX/AQAFAAAAAAAGAPb/AQAFAAAAAAAGAPf/AQADAAAAAAAGAPj/AQAGAAEAAAAGAPn/AQAEAAEAAAAGAPr/AQAEAAEAAAAGAPv/AQAEAAEAAAAGAPz/AQAEAAEAAAAGAP3/AQAAAAAAAAAGAP7/AQAEAAEAAAAGAP//AQAEAAEAAAAGAAAAAQAEAAEAAAAGAAEAAQAAAAAAAAAGAAIAAQAEAAEAAAAGAAMAAQAGAAEAAAAGAAQAAQAGAAEAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAHAN7/AQAAAAAAAAAHAN//AQAAAAAAAAAHAOD/AQAAAAAAAAAHAOH/AQAAAAAAAAAHAOL/AQAAAAAAAAAHAOP/AQAAAAAAAAAHAOT/AQAGAAEAAAAHAOX/AQAEAAEAAAAHAOb/AQAGAAEAAAAHAOf/AQAGAAEAAAAHAOj/AQAAAAAAAAAHAOn/AQAAAAAAAAAHAOr/AQAAAAAAAAAHAOv/AQAAAAAAAAAHAOz/AQAAAAAAAAAHAO3/AQAAAAAAAAAHAO7/AQAAAAAAAAAHAO//AQABAAAAAAAHAPD/AQAAAAAAAAAHAPH/AQAAAAAAAAAHAPL/AQABAAAAAAAHAPP/AQAAAAAAAAAHAPT/AQADAAAAAAAHAPX/AQAFAAAAAAAHAPb/AQAEAAAAAAAHAPf/AQABAAAAAAAHAPj/AQAEAAEAAAAHAPn/AQAGAAEAAAAHAPr/AQAGAAEAAAAHAPv/AQAGAAEAAAAHAPz/AQAGAAEAAAAHAP3/AQAAAAAAAAAHAP7/AQAEAAEAAAAHAP//AQAGAAEAAAAHAAAAAQAEAAEAAAAHAAEAAQAEAAEAAAAHAAIAAQAGAAEAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAIAN//AQAAAAAAAAAIAOD/AQAAAAAAAAAIAOH/AQAAAAAAAAAIAOL/AQAAAAAAAAAIAOP/AQABAAAAAAAIAOT/AQAAAAAAAAAIAOX/AQAGAAEAAAAIAOb/AQAGAAEAAAAIAOf/AQAGAAEAAAAIAOj/AQAGAAEAAAAIAOn/AQAGAAEAAAAIAOr/AQAGAAEAAAAIAOv/AQAGAAEAAAAIAOz/AQAAAAAAAAAIAO3/AQAAAAAAAAAIAO7/AQAAAAAAAAAIAO//AQAAAAAAAAAIAPD/AQABAAAAAAAIAPH/AQABAAAAAAAIAPL/AQABAAAAAAAIAPP/AQAAAAAAAAAIAPT/AQAAAAAAAAAIAPX/AQAEAAAAAAAIAPb/AQAFAAAAAAAIAPf/AQADAAAAAAAIAPj/AQAEAAEAAAAIAPn/AQAEAAEAAAAIAPr/AQAGAAEAAAAIAPv/AQAGAAEAAAAIAPz/AQADAAEAAAAIAP3/AQADAAEAAAAIAP7/AQAEAAEAAAAIAP//AQAAAAAAAAAIAAAAAQAGAAEAAAAIAAEAAQAEAAEAAAAIAAIAAQAGAAEAAAAIAAMAAQAAAAAAAAAIAAUAAQAAAAAAAAAJAN//AQAAAAAAAAAJAOD/AQAAAAAAAAAJAOH/AQAAAAAAAAAJAOL/AQAAAAAAAAAJAOP/AQABAAAAAAAJAOT/AQAAAAAAAAAJAOX/AQAGAAEAAAAJAOb/AQAGAAEAAAAJAOf/AQAEAAEAAAAJAOj/AQAGAAEAAAAJAOn/AQAEAAEAAAAJAOr/AQAGAAEAAAAJAOv/AQAEAAEAAAAJAOz/AQAGAAEAAAAJAO3/AQAAAAAAAAAJAO7/AQAAAAAAAAAJAO//AQAAAAAAAAAJAPD/AQAAAAAAAAAJAPH/AQAGAAEAAAAJAPL/AQAGAAEAAAAJAPP/AQAGAAEAAAAJAPT/AQADAAAAAAAJAPX/AQAFAAAAAAAJAPb/AQAEAAAAAAAJAPf/AQABAAAAAAAJAPj/AQABAAAAAAAJAPn/AQABAAAAAAAJAPr/AQAEAAEAAAAJAPv/AQADAAEAAAAJAPz/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP//AQAGAAEAAAAJAAAAAQAAAAAAAAAJAAEAAQAGAAEAAAAJAAIAAQAAAAAAAAAKAOD/AQAAAAAAAAAKAOH/AQAAAAAAAAAKAOL/AQAAAAAAAAAKAOP/AQABAAAAAAAKAOT/AQAGAAEAAAAKAOX/AQAGAAEAAAAKAOb/AQAGAAEAAAAKAOf/AQAGAAEAAAAKAOj/AQAGAAEAAAAKAOn/AQAGAAEAAAAKAOr/AQAGAAEAAAAKAOv/AQAGAAEAAAAKAOz/AQAGAAEAAAAKAO3/AQAGAAEAAAAKAO7/AQAAAAAAAAAKAO//AQAGAAEAAAAKAPD/AQAGAAEAAAAKAPH/AQAGAAEAAAAKAPL/AQAGAAEAAAAKAPP/AQAGAAEAAAAKAPT/AQAGAAEAAAAKAPX/AQADAAAAAAAKAPb/AQAFAAAAAAAKAPf/AQADAAAAAAAKAPj/AQABAAAAAAAKAPn/AQAAAAAAAAAKAPr/AQADAAEAAAAKAPv/AQAAAAAAAAAKAPz/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP//AQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAALAN//AQAAAAAAAAALAOD/AQAAAAAAAAALAOH/AQAAAAAAAAALAOL/AQAAAAAAAAALAOP/AQAAAAAAAAALAOT/AQAGAAEAAAALAOX/AQAGAAEAAAALAOb/AQAGAAEAAAALAOf/AQAGAAEAAAALAOj/AQAGAAEAAAALAOn/AQAGAAEAAAALAOr/AQAAAAAAAAALAOv/AQAGAAEAAAALAOz/AQAGAAEAAAALAO3/AQAAAAAAAAALAO7/AQAAAAAAAAALAO//AQAGAAEAAAALAPD/AQAGAAEAAAALAPH/AQAGAAEAAAALAPL/AQAGAAEAAAALAPP/AQAGAAEAAAALAPT/AQAGAAEAAAALAPX/AQADAAAAAAALAPb/AQAFAAAAAAALAPf/AQADAAAAAAALAPj/AQADAAEAAAALAPn/AQADAAEAAAALAPr/AQAAAAAAAAALAP7/AQAAAAAAAAALAP//AQAAAAAAAAALAAAAAQAAAAAAAAAMAN//AQAAAAAAAAAMAOD/AQAAAAAAAAAMAOH/AQAAAAAAAAAMAOL/AQAAAAAAAAAMAOP/AQAAAAAAAAAMAOT/AQAGAAEAAAAMAOX/AQAGAAEAAAAMAOb/AQAAAAAAAAAMAOf/AQAAAAAAAAAMAOj/AQAAAAAAAAAMAOn/AQAAAAAAAAAMAOr/AQAAAAAAAAAMAOv/AQAAAAAAAAAMAOz/AQAAAAAAAAAMAO3/AQAAAAAAAAAMAO7/AQABAAAAAAAMAO//AQABAAAAAAAMAPD/AQAAAAAAAAAMAPH/AQAGAAEAAAAMAPL/AQAGAAEAAAAMAPP/AQAGAAEAAAAMAPT/AQAGAAEAAAAMAPX/AQAEAAAAAAAMAPb/AQAFAAAAAAAMAPf/AQAEAAAAAAAMAPj/AQAAAAAAAAAMAPn/AQAAAAAAAAAMAPr/AQAAAAAAAAANAN7/AQAAAAAAAAANAN//AQAAAAAAAAANAOD/AQAAAAAAAAANAOH/AQAAAAAAAAANAOL/AQAAAAAAAAANAOP/AQAAAAAAAAANAOT/AQAGAAEAAAANAOX/AQAAAAAAAAANAOb/AQAAAAAAAAANAOf/AQAAAAAAAAANAOj/AQAAAAAAAAANAOn/AQAAAAAAAAANAOr/AQAAAAAAAAANAOv/AQAAAAAAAAANAOz/AQAAAAAAAAANAO3/AQAAAAAAAAANAO7/AQABAAAAAAANAO//AQABAAAAAAANAPD/AQABAAAAAAANAPH/AQAAAAAAAAANAPL/AQAGAAEAAAANAPP/AQAGAAEAAAANAPT/AQADAAAAAAANAPX/AQAFAAAAAAANAPb/AQAFAAAAAAANAPf/AQADAAAAAAANAPj/AQAAAAAAAAANAPn/AQAAAAAAAAAOAN7/AQAAAAAAAAAOAN//AQAAAAAAAAAOAOD/AQAAAAAAAAAOAOH/AQAAAAAAAAAOAOL/AQAAAAAAAAAOAOP/AQAAAAAAAAAOAOT/AQAAAAAAAAAOAOX/AQAAAAAAAAAOAOb/AQAAAAAAAAAOAOf/AQAAAAAAAAAOAOj/AQAAAAAAAAAOAOn/AQAAAAAAAAAOAOr/AQAAAAAAAAAOAOv/AQAAAAAAAAAOAOz/AQAAAAAAAAAOAO3/AQAAAAAAAAAOAO7/AQAAAAAAAAAOAO//AQABAAAAAAAOAPD/AQABAAAAAAAOAPH/AQABAAAAAAAOAPL/AQAAAAAAAAAOAPP/AQAGAAEAAAAOAPT/AQAGAAEAAAAOAPX/AQADAAAAAAAOAPb/AQAFAAAAAAAOAPf/AQADAAAAAAAOAPj/AQAAAAAAAAAOAPn/AQAAAAAAAAAPANr/AQAAAAAAAAAPANv/AQAAAAAAAAAPANz/AQAAAAAAAAAPAN3/AQAAAAAAAAAPAN7/AQAAAAAAAAAPAN//AQAAAAAAAAAPAOD/AQAAAAAAAAAPAOH/AQAAAAAAAAAPAOL/AQAAAAAAAAAPAOP/AQAAAAAAAAAPAOT/AQAAAAAAAAAPAOX/AQAAAAAAAAAPAOb/AQAAAAAAAAAPAOf/AQABAAAAAAAPAOj/AQABAAAAAAAPAOn/AQABAAAAAAAPAOr/AQAAAAAAAAAPAOv/AQAAAAAAAAAPAOz/AQAAAAAAAAAPAO3/AQAAAAAAAAAPAO7/AQAAAAAAAAAPAO//AQABAAAAAAAPAPD/AQABAAAAAAAPAPH/AQAAAAAAAAAPAPL/AQAAAAAAAAAPAPP/AQAGAAEAAAAPAPT/AQAGAAEAAAAPAPX/AQADAAAAAAAPAPb/AQAEAAAAAAAPAPf/AQADAAAAAAAPAPj/AQAAAAAAAAAQANr/AQAAAAAAAAAQANv/AQAAAAAAAAAQANz/AQAAAAAAAAAQAN3/AQAAAAAAAAAQAN7/AQAAAAAAAAAQAN//AQAAAAAAAAAQAOD/AQAGAAEAAAAQAOH/AQAGAAEAAAAQAOL/AQAAAAAAAAAQAOP/AQAAAAAAAAAQAOT/AQAAAAAAAAAQAOX/AQAAAAAAAAAQAOb/AQAAAAAAAAAQAOf/AQABAAAAAAAQAOj/AQAAAAAAAAAQAOn/AQABAAAAAAAQAOr/AQAAAAAAAAAQAOv/AQAAAAAAAAAQAOz/AQAAAAAAAAAQAO3/AQAAAAAAAAAQAO7/AQAAAAAAAAAQAO//AQAAAAAAAAAQAPD/AQAAAAAAAAAQAPH/AQABAAAAAAAQAPL/AQAAAAAAAAAQAPP/AQAAAAAAAAAQAPT/AQAGAAEAAAAQAPX/AQAGAAEAAAAQAPb/AQADAAAAAAAQAPf/AQADAAAAAAAQAPj/AQAAAAAAAAARANn/AQAAAAAAAAARANr/AQAAAAAAAAARANv/AQAAAAAAAAARANz/AQAAAAAAAAARAN3/AQAAAAAAAAARAN7/AQAGAAEAAAARAN//AQAEAAEAAAARAOD/AQAGAAEAAAARAOH/AQAGAAEAAAARAOL/AQAAAAAAAAARAOP/AQAAAAAAAAARAOT/AQADAAEAAAARAOX/AQAAAAAAAAARAOb/AQAAAAAAAAARAOf/AQABAAAAAAARAOj/AQAAAAAAAAARAOn/AQAAAAAAAAARAOr/AQAAAAAAAAARAOv/AQAAAAAAAAARAOz/AQAAAAAAAAARAO3/AQAAAAAAAAARAO7/AQAAAAAAAAARAO//AQAAAAAAAAARAPD/AQABAAAAAAARAPH/AQABAAAAAAARAPL/AQABAAAAAAARAPP/AQAAAAAAAAARAPT/AQAGAAEAAAARAPX/AQAAAAAAAAARAPb/AQAAAAAAAAARAPf/AQAAAAAAAAASANn/AQAAAAAAAAASANr/AQAAAAAAAAASANv/AQAAAAAAAAASANz/AQAAAAAAAAASAN3/AQAAAAAAAAASAN7/AQAGAAEAAAASAN//AQAGAAEAAAASAOD/AQAGAAEAAAASAOH/AQAGAAEAAAASAOL/AQAAAAAAAAASAOP/AQADAAEAAAASAOT/AQAAAAAAAAASAOX/AQADAAEAAAASAOb/AQAAAAAAAAASAOf/AQAAAAAAAAASAOj/AQAAAAAAAAASAOn/AQABAAAAAAASAOr/AQAAAAAAAAASAOv/AQAAAAAAAAASAOz/AQAAAAAAAAASAO3/AQAAAAAAAAASAO7/AQAAAAAAAAASAO//AQAAAAAAAAASAPD/AQABAAAAAAASAPH/AQADAAAAAAASAPL/AQABAAAAAAASAPP/AQAAAAAAAAASAPT/AQAAAAAAAAASAPX/AQAAAAAAAAASAPb/AQAAAAAAAAATANj/AQAAAAAAAAATANn/AQAAAAAAAAATANr/AQAAAAAAAAATANv/AQAAAAAAAAATANz/AQAGAAEAAAATAN3/AQAGAAEAAAATAN7/AQAEAAEAAAATAN//AQAGAAEAAAATAOD/AQAGAAEAAAATAOH/AQAAAAAAAAATAOL/AQAAAAAAAAATAOT/AQAAAAAAAAATAOX/AQAAAAAAAAATAOb/AQAAAAAAAAATAOf/AQAAAAAAAAATAOj/AQAAAAAAAAATAOn/AQAAAAAAAAATAOr/AQAAAAAAAAATAOv/AQAAAAAAAAATAOz/AQAAAAAAAAATAO3/AQAAAAAAAAATAO7/AQAAAAAAAAATAO//AQABAAAAAAATAPD/AQADAAAAAAATAPH/AQAAAAAAAAATAPL/AQAAAAAAAAAUANz/AQAAAAAAAAAUAN3/AQAAAAAAAAAUAN7/AQAGAAEAAAAUAN//AQAGAAEAAAAUAOD/AQAAAAAAAAAUAOH/AQAAAAAAAAAUAOL/AQAAAAAAAAAUAOP/AQAAAAAAAAAUAOT/AQADAAEAAAAUAOX/AQADAAEAAAAUAOb/AQAAAAAAAAAUAOf/AQAAAAAAAAAUAOj/AQABAAAAAAAUAOn/AQAAAAAAAAAUAOr/AQAAAAAAAAAUAOv/AQAGAAEAAAAUAOz/AQAGAAEAAAAUAO3/AQAGAAEAAAAUAO7/AQAGAAEAAAAUAO//AQABAAAAAAAUAPD/AQADAAAAAAAUAPH/AQAAAAAAAAAUAPL/AQAAAAAAAAAUAPP/AQAAAAAAAAAVANz/AQAAAAAAAAAVAN3/AQABAAAAAAAVAN7/AQAAAAAAAAAVAN//AQAAAAAAAAAVAOD/AQAAAAAAAAAVAOH/AQABAAAAAAAVAOL/AQAAAAAAAAAVAOP/AQAAAAAAAAAVAOT/AQAAAAAAAAAVAOX/AQAAAAAAAAAVAOb/AQAAAAAAAAAVAOf/AQAAAAAAAAAVAOj/AQAAAAAAAAAVAOn/AQAAAAAAAAAVAOr/AQAAAAAAAAAVAOv/AQAGAAEAAAAVAOz/AQAEAAEAAAAVAO3/AQAGAAEAAAAVAO7/AQAAAAAAAAAVAO//AQAAAAAAAAAVAPD/AQAAAAAAAAAVAPH/AQAAAAAAAAAVAPL/AQAGAAEAAAAVAPP/AQAAAAAAAAAWAN7/AQABAAAAAAAWAN//AQAAAAAAAAAWAOD/AQAAAAAAAAAWAOH/AQAAAAAAAAAWAOL/AQABAAAAAAAWAOP/AQAAAAAAAAAWAOT/AQAAAAAAAAAWAOX/AQAAAAAAAAAWAOb/AQAAAAAAAAAWAOf/AQAAAAAAAAAWAOj/AQAAAAAAAAAWAOn/AQAAAAAAAAAWAOr/AQAAAAAAAAAWAOv/AQAGAAEAAAAWAOz/AQAGAAEAAAAWAO3/AQAGAAEAAAAWAO7/AQAAAAAAAAAWAO//AQAAAAAAAAAWAPD/AQAAAAAAAAAWAPH/AQAGAAEAAAAWAPL/AQAGAAEAAAAWAPP/AQAGAAEAAAAWAPT/AQAAAAAAAAAXAN7/AQABAAAAAAAXAN//AQAAAAAAAAAXAOD/AQAAAAAAAAAXAOH/AQAAAAAAAAAXAOL/AQAAAAAAAAAXAOP/AQAAAAAAAAAXAOT/AQABAAAAAAAXAOX/AQABAAAAAAAXAOb/AQAAAAAAAAAXAOf/AQAAAAAAAAAXAOj/AQAAAAAAAAAXAOn/AQABAAAAAAAXAOr/AQAAAAAAAAAXAOv/AQAAAAAAAAAXAOz/AQAAAAAAAAAXAO3/AQAAAAAAAAAXAO7/AQAAAAAAAAAXAO//AQAAAAAAAAAXAPD/AQAAAAAAAAAXAPH/AQAGAAEAAAAXAPL/AQAGAAEAAAAXAPP/AQAGAAEAAAAXAPT/AQAAAAAAAAAYAN//AQAAAAAAAAAYAOD/AQAAAAAAAAAYAOH/AQABAAAAAAAYAOL/AQABAAAAAAAYAOP/AQAAAAAAAAAYAOT/AQABAAAAAAAYAOX/AQAAAAAAAAAYAOb/AQAAAAAAAAAYAOf/AQAAAAAAAAAYAOj/AQABAAAAAAAYAOn/AQABAAAAAAAYAOr/AQABAAAAAAAYAOv/AQAAAAAAAAAYAOz/AQAAAAAAAAAYAO3/AQAAAAAAAAAYAO7/AQAAAAAAAAAYAO//AQAAAAAAAAAYAPD/AQAAAAAAAAAYAPH/AQAGAAEAAAAYAPL/AQAGAAEAAAAYAPP/AQAGAAEAAAAYAPT/AQAAAAAAAAAZAN//AQABAAAAAAAZAOD/AQABAAAAAAAZAOH/AQABAAAAAAAZAOL/AQAAAAAAAAAZAOP/AQABAAAAAAAZAOT/AQAAAAAAAAAZAOX/AQAAAAAAAAAZAOb/AQAAAAAAAAAZAOf/AQABAAAAAAAZAOj/AQABAAAAAAAZAOn/AQABAAAAAAAZAOr/AQAAAAAAAAAZAOv/AQAAAAAAAAAZAOz/AQAAAAAAAAAZAO3/AQAAAAAAAAAZAO7/AQAAAAAAAAAZAO//AQAAAAAAAAAZAPD/AQAAAAAAAAAZAPH/AQAGAAEAAAAZAPL/AQAAAAAAAAAZAPP/AQAAAAAAAAAZAPT/AQAAAAAAAAAaAOD/AQABAAAAAAAaAOH/AQABAAAAAAAaAOL/AQAAAAAAAAAaAOP/AQAAAAAAAAAaAOT/AQAAAAAAAAAaAOX/AQAAAAAAAAAaAOb/AQAAAAAAAAAaAOf/AQABAAAAAAAaAOj/AQAAAAAAAAAaAOn/AQABAAAAAAAaAOz/AQAAAAAAAAAaAO3/AQAAAAAAAAAaAO7/AQAAAAAAAAAaAO//AQAAAAAAAAAaAPD/AQABAAAAAAAaAPH/AQABAAAAAAAaAPL/AQABAAAAAAAaAPP/AQAAAAAAAAAaAPT/AQAAAAAAAAAbAOD/AQABAAAAAAAbAOH/AQABAAAAAAAbAOL/AQAAAAAAAAAbAOP/AQAAAAAAAAAbAOT/AQAAAAAAAAAbAOX/AQAAAAAAAAAbAOb/AQAAAAAAAAAbAOf/AQABAAAAAAAbAOj/AQABAAAAAAAbAOv/AQAAAAAAAAAbAOz/AQAAAAAAAAAbAO3/AQABAAAAAAAbAO7/AQABAAAAAAAbAO//AQAAAAAAAAAbAPD/AQAAAAAAAAAbAPH/AQAAAAAAAAAbAPL/AQABAAAAAAAbAPP/AQAAAAAAAAAcAOH/AQAAAAAAAAAcAOL/AQAAAAAAAAAcAOP/AQAAAAAAAAAcAOT/AQAAAAAAAAAcAOX/AQAAAAAAAAAcAOb/AQADAAAAAAAcAOf/AQABAAAAAAAcAOj/AQABAAAAAAAcAOn/AQABAAAAAAAcAOz/AQABAAAAAAAcAO3/AQABAAAAAAAcAO7/AQABAAAAAAAcAO//AQADAAAAAAAcAPD/AQADAAAAAAAcAPH/AQADAAAAAAAcAPL/AQADAAAAAAAcAPP/AQABAAAAAAAcAPT/AQAAAAAAAAAdAOH/AQAAAAAAAAAdAOL/AQAAAAAAAAAdAOP/AQAAAAAAAAAdAOT/AQADAAAAAAAdAOX/AQADAAAAAAAdAOb/AQAGAAEAAAAdAOf/AQABAAAAAAAdAOj/AQABAAAAAAAdAOv/AQAEAAAAAAAdAOz/AQADAAAAAAAdAO3/AQADAAAAAAAdAO7/AQADAAAAAAAdAO//AQAEAAAAAAAdAPD/AQAEAAAAAAAdAPH/AQAEAAAAAAAdAPL/AQABAAAAAAAdAPP/AQAAAAAAAAAeAOL/AQAAAAAAAAAeAOP/AQAAAAAAAAAeAOT/AQAAAAAAAAAeAOX/AQAAAAAAAAAeAOb/AQAGAAEAAAAeAO3/AQAFAAAAAAAeAO7/AQAFAAAAAAAeAO//AQAFAAAAAAAeAPD/AQAFAAAAAAAeAPH/AQAFAAAAAAAeAPL/AQADAAEAAAAeAPP/AQAAAAAAAAAfAOL/AQAAAAAAAAAfAOP/AQAAAAAAAAAfAOT/AQAGAAEAAAAfAPL/AQAAAAAAAAAfAPP/AQAAAAAAAAD9////AQADAAAAAAAcAA0AAQADAAAAAAAcAAwAAQADAAAAAAAcAAsAAQADAAAAAAAcAAoAAQADAAAAAAAcAAkAAQADAAAAAAAcAAgAAQADAAAAAAAcAAcAAQADAAAAAAAcAAYAAQADAAAAAAAcAAUAAQADAAAAAAAcAAQAAQADAAAAAAAcAAMAAQADAAAAAAAcAAIAAQADAAAAAAAcAAEAAQADAAAAAAAcAAAAAQADAAAAAAAeAA0AAQAAAAAAAAAeAAwAAQAAAAAAAAAeAAsAAQAAAAAAAAAeAAoAAQAAAAAAAAAeAAkAAQAAAAAAAAAeAAgAAQAAAAAAAAAeAAcAAQAAAAAAAAAeAAYAAQAAAAAAAAAeAAUAAQAAAAAAAAAeAAQAAQAAAAAAAAAeAAMAAQAAAAAAAAAeAAIAAQAAAAAAAAAeAAEAAQAAAAAAAAAeAAAAAQAAAAAAAAAAAP3/AQAAAAAAAAD1/wAAAQAAAAAAAAATAOP/AQAAAAAAAAA=")
tile_set = SubResource("TileSet_hlajd")
script = ExtResource("3_oilk6")

[node name="player_camera" parent="." instance=ExtResource("2_if10o")]

[node name="Rail_Placer" parent="." instance=ExtResource("6_4lcrx")]

[node name="unit_creator_window" parent="." instance=ExtResource("9_k4rfp")]
position = Vector2i(200, 36)

[node name="unit_info_window" parent="." instance=ExtResource("10_75rfn")]
position = Vector2i(200, 36)

[node name="depot_window" parent="." instance=ExtResource("8_mxbp3")]

[node name="station_window" parent="." instance=ExtResource("9_txwkn")]

[node name="factory_window" parent="." instance=ExtResource("9_p8wcw")]

[node name="factory_recipe_gui" parent="." instance=ExtResource("10_60crw")]

[node name="factory_construction_gui" parent="." instance=ExtResource("11_46x22")]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
